--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -179,7 +179,7 @@ Ext.onReady(function (){
     var geoserver = "{{geoserver}}";
     
     var tile_layer = new OpenLayers.Layer.WMS(
-        layer_name + "- Tiled", OpenLayers.ProxyHost+geoserver+"geonode/wms",
+        layer_name + "- Tiled", geoserver+"geonode/wms",
         {
             LAYERS: stored_layer["name"],
             format:  'image/png',
