--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -43,9 +43,6 @@ OpenLayers.Request.DEFAULT_CONFIG.headers = {
 };
 
 var curr_location =  "{{siteurl}}";
-
-console.log(curr_location);
-
 //OpenLayers.ProxyHost = "http://192.168.56.100:8000/proxy/?url=";
 OpenLayers.ProxyHost = "http://"+curr_location+"/proxy/?url=";
 
@@ -247,7 +244,7 @@ Ext.onReady(function (){
                 property: "the_geom",
                 value: transformed_bounds.toGeometry()
             });
-
+            console.log(geoserver+"geonode/wfs");
             var wfs_proto = new OpenLayers.Protocol.WFS({
                 version: "1.0.0",
                 //url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
