debugging use of siteurl variable in maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -43,6 +43,7 @@ OpenLayers.Request.DEFAULT_CONFIG.headers = {
 };
 
 var curr_location =  "{{siteurl}}";
+console.log(curr_location);
 //OpenLayers.ProxyHost = "http://192.168.56.100:8000/proxy/?url=";
 OpenLayers.ProxyHost = "http://"+curr_location+"/proxy/?url=";
 
