openlayers proxy call changed to use HTTPS

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -44,7 +44,7 @@ OpenLayers.Request.DEFAULT_CONFIG.headers = {
 };
 
 //OpenLayers.ProxyHost = "http://192.168.20.53/proxy/?url=";
-OpenLayers.ProxyHost = "http://"+curr_location+"/proxy/?url=";
+OpenLayers.ProxyHost = "https://"+curr_location+"/proxy/?url=";
 
 
 {% autoescape off %}
