--- a/geonode/eula/templates/eula_nested_dialog.html
+++ b/geonode/eula/templates/eula_nested_dialog.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
 {% load eula_extras %}
     <style>
         .modal-eula {
