changing size of the display map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -212,7 +212,7 @@ Ext.onReady(function (){
     var config = {
         renderTo: "preview_map",
         height: 400,
-        width: 100%,
+        width: "100%",
         map: map,
         title: "Tile Selection",
         items: items,
