making the display map wider

--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -38,7 +38,9 @@
 	</ul>-->
  </div>
  <br />
- <h3 class="page-title">Selected Tiles</h3>
+ <div  class ="row">
+    <h3 class="page-title">Selected Tiles</h3>
+ </div>
  <div class="row" id="point_display">
      
  </div>
