making the display map wider

--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -38,7 +38,7 @@
 	</ul>-->
  </div>
  <br />
- <div  class ="row">
+ <div  class ="page-header">
     <h3 class="page-title">Selected Tiles</h3>
  </div>
  <div class="row" id="point_display">
