--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -85,24 +85,30 @@ function createTile(computed_corners){
 function display_points(div_id, vec_layer){
     var container = document.getElementById(div_id);
     container.removeChild(container.firstElementChild||container.firstChild);
-    var list_element = document.createElement("ul");
-    container.appendChild(list_element);
+    //var list_element = document.createElement("li");
+    var table_element = document.createElement("table");
+    table_element.setAttribute("border", 3);
+    container.appendChild(table_element);
     
     var georef_string = "";
     
-    for (var i=0; i< tile_list.length; i++){
-        var item_element = document.createElement("li");
-        item_element.setAttribute("id",tile_list[i].georef);
-        item_element.innerHTML = tile_list[i].georef;
-        /*item_element.onclick = function(){
-            removeHighlight(item_element.innerHTML, vec_layer);
-            this.parentNode.removeChild(this);
-        };*/
-        list_element.appendChild(item_element);
-        if(i == 0){
-            georef_string+=tile_list[i].georef;
-        }else{
-              georef_string+=","+tile_list[i].georef;
+    for (var i=0; i< tile_list.length/5; i++){
+        var row_element = document.createElement("tr");
+        table_element.appendChild(row_element);
+        for (var j = 0; j< 5; j++){
+            //var item_element = document.createElement("li");
+            //item_element.setAttribute("id",tile_list[i].georef);
+            //item_element.innerHTML = tile_list[i].georef;
+            //list_element.appendChild(item_element);
+            var georef_element = document.createElement("td");
+            georef_element.setAttribute("id",tile_list[i*5+j].georef);
+            georef_element.innerHTML  = tile_list[i*5+j].georef;
+            row_element.appendChild(georef_element);
+            if(i == 0){
+                georef_string+=tile_list[i].georef;
+            }else{
+                  georef_string+=","+tile_list[i].georef;
+            }
         }
     }
    document.getElementById("georef_area").setAttribute("value",georef_string);
