--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -102,6 +102,7 @@ function display_points(div_id, vec_layer){
             //list_element.appendChild(item_element);
             var georef_element = document.createElement("td");
             georef_element.setAttribute("id",tile_list[i*5+j].georef);
+            georef_element.setAttribute("style", "width:120px");
             georef_element.innerHTML  = tile_list[i*5+j].georef;
             row_element.appendChild(georef_element);
             if(i == 0){
