--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -101,6 +101,7 @@ function display_points(div_id, vec_layer){
             //item_element.innerHTML = tile_list[i].georef;
             //list_element.appendChild(item_element);
             var georef_element = document.createElement("td");
+            console.log(tile_list[i*5+j].georef);
             georef_element.setAttribute("id",tile_list[i*5+j].georef);
             georef_element.setAttribute("style", "width:120px");
             georef_element.innerHTML  = tile_list[i*5+j].georef;
