removed visible borders of the georefs table, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -87,7 +87,7 @@ function display_points(div_id, vec_layer){
     container.removeChild(container.firstElementChild||container.firstChild);
     //var list_element = document.createElement("li");
     var table_element = document.createElement("table");
-    table_element.setAttribute("border", 3);
+    //table_element.setAttribute("border", 3);
     container.appendChild(table_element);
     
     var georef_string = "";
