--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -102,9 +102,12 @@ function display_points(div_id, vec_layer){
             var georef_element = document.createElement("td");
             georef_element.setAttribute("id",tile_list[i*5+j].georef);
             var container_width = document.getElementById("embedded_map").offsetWidth
-            console.log(container_width);
             georef_element.setAttribute("style", "width: "+container_width/5+"px; height: 30px;");
-            georef_element.innerHTML  = tile_list[i*5+j].georef;
+            //georef_element.innerHTML  = tile_list[i*5+j].georef;
+            var font_element = document.createElement("font");
+            font_element.setAttribute("size", 24);
+            font_element.innerHTML = tile_list[i*5+j].georef;
+            
             row_element.appendChild(georef_element);
             if(i == 0){
                 georef_string+=tile_list[i].georef;
