--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -103,11 +103,11 @@ function display_points(div_id, vec_layer){
             georef_element.setAttribute("id",tile_list[i*5+j].georef);
             var container_width = document.getElementById("embedded_map").offsetWidth
             georef_element.setAttribute("style", "width: "+container_width/5+"px; height: 30px;");
-            //georef_element.innerHTML  = tile_list[i*5+j].georef;
-            var font_element = document.createElement("font");
+            georef_element.innerHTML  = tile_list[i*5+j].georef;
+            /*var font_element = document.createElement("font");
             font_element.setAttribute("size", 8);
             font_element.innerHTML = tile_list[i*5+j].georef;
-            georef_element.appendChild(font_element);
+            georef_element.appendChild(font_element);*/
             
             row_element.appendChild(georef_element);
             if(i == 0){
