created new static file georef.css

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -1,5 +1,6 @@
 {% include "geonode/ext_header.html" %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}geoext/css/popup.css">
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}geoext/css/georef.css">
 <script type="text/javascript" src="{{STATIC_URL}}lib/js/OpenLayers.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}lib/js/GeoExt.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL}}geonode/js/utils/thumbnail.js"></script>
