--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -1,6 +1,6 @@
 {% include "geonode/ext_header.html" %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}geoext/css/popup.css">
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}geoext/css/georef.css">
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}geonode/css/georef.css">
 <script type="text/javascript" src="{{STATIC_URL}}lib/js/OpenLayers.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}lib/js/GeoExt.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL}}geonode/js/utils/thumbnail.js"></script>
@@ -98,13 +98,18 @@ function display_points(div_id, vec_layer){
         table_element.appendChild(row_element);
         for (var j = 0; j< 5; j++){
 
-            var georef_element = document.createElement("td");
-            georef_element.setAttribute("id",tile_list[i*5+j].georef);
-            var container_width = document.getElementById("embedded_map").offsetWidth
-            georef_element.setAttribute("style", "width: "+container_width/5+"px; height: 30px;");
-            georef_element.innerHTML  = "<font size=3.5>"+tile_list[i*5+j].georef+"</font>";
+            var georef_column = document.createElement("td");
+            georef_column.setAttribute("id",tile_list[i*5+j].georef);
+            //var container_width = document.getElementById("embedded_map").offsetWidth
+            //georef_element.setAttribute("style", "width: "+container_width/5+"px; height: 30px;");
+            //georef_element.innerHTML  = "<font size=3.5>"+tile_list[i*5+j].georef+"</font>";
+            var georef_data = document.createElement("font");
+            georef_data.className += "georef_font"
+            georef_data.innerHTML = tile_list[i*5+j].georef
             
-            row_element.appendChild(georef_element);
+            georef_column.appendChild(georef_data);
+            row_element.appendChild(georef_column);
+            
             if(i == 0){
                 georef_string+=tile_list[i].georef;
             }else{
