--- a/geonode/cephgeo/templates/ceph_manager.html
+++ b/geonode/cephgeo/templates/ceph_manager.html
@@ -15,9 +15,9 @@
     <div class="col-md-3">
         <div class="selections">
             <nav class="filter">
-                <h4><a href="{% url 'cephgeo.views.file_list_geonode' %}" class="toggle toggle-nav"><i class="fa fa-server"></i>Datastore Files</a></h4>
-                <h4><a href="{% url 'cephgeo.views.file_list_ceph' %}" class="toggle toggle-nav"><i class="fa fa-server"></i>Ceph Data Objects</a></h4>
-                <h4><a href="{% url 'cephgeo.views.data_input' %}" class="toggle toggle-nav"><i class="fa fa-server"></i>Metadata Input</a></h4>
+                <h4><a href="{% url 'cephgeo.views.file_list_geonode' %}" class="toggle toggle-nav"><i class="fa fa-circle-o-notch fa-rotate-90"></i>Datastore Files</a></h4>
+                <h4><a href="{% url 'cephgeo.views.file_list_ceph' %}" class="toggle toggle-nav"><i class="fa fa-circle-o-notch fa-rotate-90"></i>Ceph Data Objects</a></h4>
+                <h4><a href="{% url 'cephgeo.views.data_input' %}" class="toggle toggle-nav"><i class="fa fa-circle-o-notch fa-rotate-90"></i>Metadata Input</a></h4>
             </nav>
         </div>
     </div>
