--- a/geonode/cephgeo/templates/ceph_main.html
+++ b/geonode/cephgeo/templates/ceph_main.html
@@ -15,8 +15,8 @@
     <div class="col-md-3">
         <div class="selections">
             <nav class="filter">
-                <h4><a href="{% url 'maptiles.views.tiled_view' %}" class="toggle toggle-nav"><i class="fa fa-database"></i>MapTiles</a></h4>
-                <h4><a href="{% url 'cephgeo.views.get_cart' %}" class="toggle toggle-nav"><i class="fa fa-database"></i>Data Cart</a></h4>
+                <h4><a href="{% url 'maptiles.views.tiled_view' %}" class="toggle toggle-nav"><i class="fa fa-globe"></i>MapTiles</a></h4>
+                <h4><a href="{% url 'cephgeo.views.get_cart' %}" class="toggle toggle-nav"><i class="fa fa-shopping-cart"></i>Data Cart</a></h4>
                 <h4><a href="{% url 'cephgeo.views.ftp_request_list' %}" class="toggle toggle-nav"><i class="fa fa-database"></i>FTP Requests</a></h4>
             </nav>
         </div>
