added side bar for data selection options

--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -33,6 +33,13 @@
 			<div id="preview_map"></div>
 		</div>
     </div>
+    <div class="col-md-3">
+        <ul class="list-group">
+            <li class="list-group-item">Bounding box selection</li>
+            <li class="list-group-item">Area of Interest</li>
+            <li class="list-group-item">Shape file upload</li>
+        </ul>
+    </div>
 </div>
 
     <!--<ul class="list-group">
