added buttons to side bar

--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -35,9 +35,14 @@
     </div>
     <div class="col-md-3">
         <ul class="list-group">
-            <li class="list-group-item">Bounding box selection</li>
-            <li class="list-group-item">Area of Interest</li>
-            <li class="list-group-item">Shape file upload</li>
+            <li class="list-group-item">
+                Bounding box selection
+                <input type="submit" id="bbox_submit" name="bbox_submit" value="Submit Bounding Box limits" class="btn btn-default" />
+            </li>
+            <li class="list-group-item">
+                Area of Interest
+            <input type="submit" id="interest_submit" name="interest_submit" value="Submit Area of Interest" class="btn btn-default" />
+            </li>
         </ul>
     </div>
 </div>
