--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -38,7 +38,7 @@
             <li class="list-group-item">
                 <form id="bbox_form">
                     Bounding box selection <br />
-                    Upper limit: <input type="text" name="upperlimit"/><br />
+                    <tr><td>Upper limit: </td><td><input type="text" name="upperlimit"/></td></tr>
                     Left limit: <input type="text" name="leftlimit"/><br />
                     Right limit: <input type="text" name="rightlimit"/><br />
                     Lower limit:<input type="text" name="lowerlimit"/><br />
