--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -39,9 +39,9 @@
                 <form id="bbox_form">
                     Bounding box selection <br />
                     <tr><td>Upper limit: </td><td><input type="text" name="upperlimit"/></td></tr>
-                    Left limit: <input type="text" name="leftlimit"/><br />
-                    Right limit: <input type="text" name="rightlimit"/><br />
-                    Lower limit:<input type="text" name="lowerlimit"/><br />
+                    <tr><td>Left limit: </td><td><input type="text" name="leftlimit"/></td></tr>
+                    <tr><td>Right limit: </td><td><input type="text" name="rightlimit"/></td></tr>
+                    <tr><td>Lower limit: </td><td><input type="text" name="lowerlimit"/></td></tr>
                     <input type="submit" id="bbox_submit" name="bbox_submit" value="Submit Bounding Box" class="btn btn-default" />
                 </form>
             </li>
