modified map and sidebar widths

--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -38,10 +38,12 @@
             <li class="list-group-item">
                 <form id="bbox_form">
                     Bounding box selection <br />
-                    <tr><td>Upper limit: </td><td><input type="text" name="upperlimit"/></td></tr>
-                    <tr><td>Left limit: </td><td><input type="text" name="leftlimit"/></td></tr>
-                    <tr><td>Right limit: </td><td><input type="text" name="rightlimit"/></td></tr>
-                    <tr><td>Lower limit: </td><td><input type="text" name="lowerlimit"/></td></tr>
+                    <table>
+                        <tr><td>Upper limit: </td><td><input type="text" name="upperlimit"/></td></tr>
+                        <tr><td>Left limit: </td><td><input type="text" name="leftlimit"/></td></tr>
+                        <tr><td>Right limit: </td><td><input type="text" name="rightlimit"/></td></tr>
+                        <tr><td>Lower limit: </td><td><input type="text" name="lowerlimit"/></td></tr>
+                    </table>
                     <input type="submit" id="bbox_submit" name="bbox_submit" value="Submit Bounding Box" class="btn btn-default" />
                 </form>
             </li>
