--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -37,13 +37,13 @@
         <ul class="list-group">
             <li class="list-group-item">
                 <form id="bbox_form">
-                    Bounding box selection <br />
+                    Bounding box selection (decimal degrees) <br />
                     <table>
-                        <tr><td>Upper limit: </td><td><input type="text" name="upperlimit"/></td></tr>
-                        <tr><td>Left limit: </td><td><input type="text" name="leftlimit"/></td></tr>
-                        <tr><td>Right limit: </td><td><input type="text" name="rightlimit"/></td></tr>
-                        <tr><td>Lower limit: </td><td><input type="text" name="lowerlimit"/></td></tr>
-                    </table>
+                        <tr><td>Upper limit: </td><td><input type="number" name="upperlimit" value=0 /></td></tr>
+                        <tr><td>Left limit: </td><td><input type="number" name="leftlimit"value=0 /></td></tr>
+                        <tr><td>Right limit: </td><td><input type="number" name="rightlimit" value=0 /></td></tr>
+                        <tr><td>Lower limit: </td><td><input type="number" name="lowerlimit" value=0 /></td></tr>
+                    </table> <br />
                     <input type="submit" id="bbox_submit" name="bbox_submit" value="Submit Bounding Box" class="btn btn-default" />
                 </form>
             </li>
