--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -37,6 +37,9 @@
                 })
        });
        
+       $("#bbox_form").submit(function(e){
+           e.preventDefault();
+        });
        
     });
 </script>
@@ -57,6 +60,7 @@ var app, map;
 var tile_list = [];
 var curr_popup;
 var interest_bounds; 
+var geoserver = "{{geoserver}}";
 // added stuff
 
 var _TILE_SIZE = 1000;
@@ -145,6 +149,65 @@ function find_georef(tile_list, georef){
      return index;
 }
 
+function selection_bounds(bounds, highlight_layer) {
+
+    var ll = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.left, bounds.bottom)); 
+    var ur = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.right, bounds.top)); 
+    var map_bounds = new OpenLayers.Bounds();
+    map_bounds.extend(ll);
+    map_bounds.extend(ur);
+    
+    var transformed_bounds = map_bounds.clone().transform(new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651"));
+    
+    var filter = new OpenLayers.Filter.Spatial({
+        type: OpenLayers.Filter.Spatial.INTERSECTS,
+        property: "the_geom",
+        value: transformed_bounds.toGeometry()
+    });
+    
+    var wfs_proto = new OpenLayers.Protocol.WFS({
+        version: "1.0.0",
+        //url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
+        url: geoserver+"geonode/wfs",
+        featurePrefix: "geonode",
+        featureType: "{{feature_tiled}}",
+        featureNS: "http://www.geonode.org/",
+        srsName: "EPSG:32651",
+        outputFormat: "json"
+    });              
+
+    var wfs_resp = wfs_proto.read({
+        filter: filter,
+        callback: function(response){
+            if(response.priv.responseText){
+                var json_parser = new OpenLayers.Format.JSON();
+                var feature_out = json_parser.read(response.priv.responseText);
+
+                for ( var i=0; i<feature_out.totalFeatures; i++ ){
+                    var f = feature_out.features[i];
+                    var corners = {
+                        "ur_x": f.properties.MAXX, "ur_y": f.properties.MAXY,
+                        "ul_x": f.properties.MINX, "ul_y": f.properties.MAXY,
+                        "ll_x": f.properties.MINX, "ll_y": f.properties.MINY,
+                        "lr_x": f.properties.MAXX,"lr_y": f.properties.MINY
+                    }
+
+                    var tile = createTile(corners);
+                    if (find_georef(tile_list, tile.georef)<0){
+                         tile_list.push(tile);
+                         tile.feature = createHighlightBox(tile.corners);
+                         highlight_layer.addFeatures([tile.feature]);
+                    }
+    
+                }
+                display_points("point_display", highlight_layer);
+            }else{
+                alert("Server did not respond.");
+            }
+        }
+    });
+}
+
 function removeHighlight(georef, vec_layer){
     var index= find_georef(tile_list, georef);
     vec_layer.removeFeatures([tile_list[index].feature]);
@@ -190,7 +253,6 @@ Ext.onReady(function (){
     
     var stored_layer = map_options["layers"].filter(function(l){ return l["name"] == layer_name })[0];
     var source_index = stored_layer["source"];
-    var geoserver = "{{geoserver}}";
     
     var tile_layer = new OpenLayers.Layer.WMS(
         layer_name + "- Tiled", geoserver+"geonode/wms",
@@ -247,63 +309,10 @@ Ext.onReady(function (){
             this.box.activate();
         },
         
-        notice: function (bounds) {
-
-            var ll = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.left, bounds.bottom)); 
-            var ur = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.right, bounds.top)); 
-            var map_bounds = new OpenLayers.Bounds();
-            map_bounds.extend(ll);
-            map_bounds.extend(ur);
-            
-            var transformed_bounds = map_bounds.clone().transform(new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651"));
-            
-            var filter = new OpenLayers.Filter.Spatial({
-                type: OpenLayers.Filter.Spatial.INTERSECTS,
-                property: "the_geom",
-                value: transformed_bounds.toGeometry()
-            });
-            
-            var wfs_proto = new OpenLayers.Protocol.WFS({
-                version: "1.0.0",
-                //url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
-                url: geoserver+"geonode/wfs",
-                featurePrefix: "geonode",
-                featureType: "{{feature_tiled}}",
-                featureNS: "http://www.geonode.org/",
-                srsName: "EPSG:32651",
-                outputFormat: "json"
-            });              
-
-            var wfs_resp = wfs_proto.read({
-                filter: filter,
-                callback: function(response){
-                    if(response.priv.responseText){
-                        var json_parser = new OpenLayers.Format.JSON();
-                        var feature_out = json_parser.read(response.priv.responseText);
-
-                        for ( var i=0; i<feature_out.totalFeatures; i++ ){
-                            var f = feature_out.features[i];
-                            var corners = {
-                                "ur_x": f.properties.MAXX, "ur_y": f.properties.MAXY,
-                                "ul_x": f.properties.MINX, "ul_y": f.properties.MAXY,
-                                "ll_x": f.properties.MINX, "ll_y": f.properties.MINY,
-                                "lr_x": f.properties.MAXX,"lr_y": f.properties.MINY
-                            }
-
-                            var tile = createTile(corners);
-                            if (find_georef(tile_list, tile.georef)<0){
-                                 tile_list.push(tile);
-                                 tile.feature = createHighlightBox(tile.corners);
-                                 highlight_layer.addFeatures([tile.feature]);
-                            }
-            
-                        }
-                        display_points("point_display", highlight_layer);
-                    }else{
-                        alert("Server did not respond.");
-                    }
-                }
-            });
+        highlight_layer: highlight_layer,
+        
+        notice: function (bounds){ 
+            selection_bounds(bounds, this.highlight_layer);
         }
     });
 
