--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -18,7 +18,30 @@
         return (bytes / Math.pow(k, i)).toPrecision(decimals + 1) + ' ' + sizes[i];
     }
     
-    $(document).ready(function(){
+    
+</script>
+<script type="text/javascript" >
+
+OpenLayers.ImgPath = "{{ STATIC_URL }}geoexplorer/externals/openlayers/theme/default/img";
+OpenLayers.Request.DEFAULT_CONFIG.headers = {
+    'X-CSRFToken': '{{ csrf_token|escapejs }}'
+};
+
+var curr_location =  "{{siteurl}}";
+OpenLayers.ProxyHost = curr_location+"/proxy/?url=";
+
+{% autoescape off %}
+
+var options = {{ viewer| safe }};
+var app, map;
+var tile_list = [];
+var interest_bounds; 
+var geoserver = "{{geoserver}}";
+// added stuff
+
+var _TILE_SIZE = 1000;
+
+$(document).ready(function(){
        $("#georef_form").submit(function(e) {
            e.preventDefault();
            var self = this;
@@ -39,31 +62,21 @@
        
        $("#bbox_form").submit(function(e){
            e.preventDefault();
+           var self= this;
+           var highlight_layer = map.getLayersByName("Highlight Layer")[0];
+           selection_bounds(
+                new OpenLayers.Bounds(
+                    $('#leftlimit').val(),
+                    $('#lowerlimit').val(),
+                    $('#rightlimit').val(),
+                    $('#upperlimit').val()
+                ),
+                highlight_layer
+            );
         });
        
-    });
-</script>
-<script type="text/javascript" >
+});
 
-OpenLayers.ImgPath = "{{ STATIC_URL }}geoexplorer/externals/openlayers/theme/default/img";
-OpenLayers.Request.DEFAULT_CONFIG.headers = {
-    'X-CSRFToken': '{{ csrf_token|escapejs }}'
-};
-
-var curr_location =  "{{siteurl}}";
-OpenLayers.ProxyHost = curr_location+"/proxy/?url=";
-
-{% autoescape off %}
-
-var options = {{ viewer| safe }};
-var app, map;
-var tile_list = [];
-var curr_popup;
-var interest_bounds; 
-var geoserver = "{{geoserver}}";
-// added stuff
-
-var _TILE_SIZE = 1000;
 
 function floor_tile_size(x){
     return  (Math.floor(x/_TILE_SIZE) * _TILE_SIZE);
@@ -108,14 +121,6 @@ function display_points(div_id, vec_layer){
             georef_column.setAttribute("id",tile_list[i*5+j].georef);
             georef_column.className += "georef_td"
             georef_column.innerHTML = tile_list[i*5+j].georef
-            //var container_width = document.getElementById("embedded_map").offsetWidth
-            //georef_element.setAttribute("style", "width: "+container_width/5+"px; height: 30px;");
-            //georef_element.innerHTML  = "<font size=3.5>"+tile_list[i*5+j].georef+"</font>";
-            //var georef_data = document.createElement("font");
-            //georef_data.className += "georef_font"
-            //georef_data.innerHTML = tile_list[i*5+j].georef
-            
-            //georef_column.appendChild(georef_data);
             row_element.appendChild(georef_column);
             
             if(i == 0){
@@ -149,13 +154,7 @@ function find_georef(tile_list, georef){
      return index;
 }
 
-function selection_bounds(bounds, highlight_layer) {
-
-    var ll = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.left, bounds.bottom)); 
-    var ur = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.right, bounds.top)); 
-    var map_bounds = new OpenLayers.Bounds();
-    map_bounds.extend(ll);
-    map_bounds.extend(ur);
+function selection_bounds(map_bounds, highlight_layer) {
     
     var transformed_bounds = map_bounds.clone().transform(new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651"));
     
@@ -206,6 +205,48 @@ function selection_bounds(bounds, highlight_layer) {
             }
         }
     });
+}
+
+function areaInterestZoom(province, municipality){
+    var wfs_proto = new OpenLayers.Protocol.WFS({
+            version: "1.0.0",
+            //url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
+            url: geoserver+"geonode/wfs",
+            featurePrefix: "geonode",
+            featureType: "{{ feature_municipality }}",
+            featureNS: "http://www.geonode.org/",
+            srsName: "EPSG:32651",
+            outputFormat: "application/json"
+        });              
+        
+        var filter = new OpenLayers.Filter.Logical({
+            type: "&&",
+            filters:[
+                new OpenLayers.Filter.Comparison({
+                    type: "==",
+                    property: "NAME_2",
+                    value: municipality
+                }),
+                new OpenLayers.Filter.Comparison({
+                    type: "==",
+                    property:"NAME_1",
+                    value: province
+                })
+            ]
+        });
+        
+        var wfs_resp  = wfs_proto.read({
+            filter: filter,
+            callback: function(response){
+                if(response.priv.responseText){
+                    var json_parser = new OpenLayers.Format.GeoJSON();
+                    var feature_out = json_parser.read(response.priv.responseText);
+                    feature_out[0].geometry.calculateBounds();
+                    interest_bounds = feature_out[0].geometry.getBounds();
+                    map.zoomToExtent(interest_bounds.transform(new OpenLayers.Projection("EPSG:32651"), new OpenLayers.Projection("EPSG:900913")), false);
+                }
+            }
+        });
 }
 
 function removeHighlight(georef, vec_layer){
@@ -312,7 +353,14 @@ Ext.onReady(function (){
         highlight_layer: highlight_layer,
         
         notice: function (bounds){ 
-            selection_bounds(bounds, this.highlight_layer);
+            
+            var ll = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.left, bounds.bottom)); 
+            var ur = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.right, bounds.top)); 
+            var map_bounds = new OpenLayers.Bounds();
+            map_bounds.extend(ll);
+            map_bounds.extend(ur);
+            console.log(map_bounds);
+            selection_bounds(map_bounds, this.highlight_layer);
         }
     });
 
@@ -366,51 +414,11 @@ Ext.onReady(function (){
 
     var interest = "{{ interest }}";
     app = new GeoExt.MapPanel(config);
+    
     if (interest ){
-        var wfs_proto = new OpenLayers.Protocol.WFS({
-            version: "1.0.0",
-            //url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
-            url: geoserver+"geonode/wfs",
-            featurePrefix: "geonode",
-            featureType: "{{ feature_municipality }}",
-            featureNS: "http://www.geonode.org/",
-            srsName: "EPSG:32651",
-            outputFormat: "application/json"
-        });              
-        
-        // assuming that interest is of the form "<province>,<municipality/city>"
-        // split the interest string here
-        var name = interest.split(",");
-        
-        var filter = new OpenLayers.Filter.Logical({
-            type: "&&",
-            filters:[
-                new OpenLayers.Filter.Comparison({
-                    type: "==",
-                    property: "NAME_2",
-                    value: name[1]
-                }),
-                new OpenLayers.Filter.Comparison({
-                    type: "==",
-                    property:"NAME_1",
-                    value: name[0]
-                })
-            ]
-        });
-        
-        var wfs_resp  = wfs_proto.read({
-            filter: filter,
-            callback: function(response){
-                if(response.priv.responseText){
-                    var json_parser = new OpenLayers.Format.GeoJSON();
-                    var feature_out = json_parser.read(response.priv.responseText);
-                    feature_out[0].geometry.calculateBounds();
-                    interest_bounds = feature_out[0].geometry.getBounds();
-                    map.zoomToExtent(interest_bounds.transform(new OpenLayers.Projection("EPSG:32651"), new OpenLayers.Projection("EPSG:900913")), false);
-                }
-            }
-        });
-        
+        province = interest.split(",")[0];
+        municipaity = interest.split(",")[1];
+        areaInterestZoom(province,municipality, map);
     }else{
         map.zoomToExtent(tile_layer.maxExtent, false);
     }
