--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -39,10 +39,10 @@
                 <form id="bbox_form">
                     Bounding box selection (decimal degrees) <br />
                     <table>
-                        <tr><td>Upper limit: </td><td><input type="number" name="upperlimit" value=0 step="any" /></td></tr>
-                        <tr><td>Left limit: </td><td><input type="number" name="leftlimit"value=0 step="any"/></td></tr>
-                        <tr><td>Right limit: </td><td><input type="number" name="rightlimit" value=0 step="any"/></td></tr>
-                        <tr><td>Lower limit: </td><td><input type="number" name="lowerlimit" value=0 step="any"/></td></tr>
+                        <tr><td>Upper limit: </td><td><input type="number" id="upperlimit" name="upperlimit" value=0 step="any" /></td></tr>
+                        <tr><td>Left limit: </td><td><input type="number" id="leftlimit" name="leftlimit"value=0 step="any"/></td></tr>
+                        <tr><td>Right limit: </td><td><input type="number" id="rightlimit" name="rightlimit" value=0 step="any"/></td></tr>
+                        <tr><td>Lower limit: </td><td><input type="number" id="lowerlimit" name="lowerlimit" value=0 step="any"/></td></tr>
                     </table> <br />
                     <input type="submit" id="bbox_submit" name="bbox_submit" value="Submit Bounding Box" class="btn btn-default" />
                 </form>
