added EPSG label in bounding box selection

--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -37,7 +37,7 @@
         <ul class="list-group">
             <li class="list-group-item">
                 <form id="bbox_form">
-                    Bounding box selection (decimal degrees) <br />
+                    <b>Bounding box selection</b> (EPSG:900913 decimal degrees) <br />
                     <table>
                         <tr><td>Upper limit: </td><td><input type="number" id="upperlimit" name="upperlimit" value=0 step="any" /></td></tr>
                         <tr><td>Left limit: </td><td><input type="number" id="leftlimit" name="leftlimit"value=0 step="any"/></td></tr>
