Revert b4e47aa7c0640bffa83c30bb028046d9211710c4.

--- a/geonode/layers/templates/layers/layer_replace.html
+++ b/geonode/layers/templates/layers/layer_replace.html
@@ -111,7 +111,7 @@
 
   csrf_token =  "{{ csrf_token }}",
   form_target = "{% url "layer_replace" layer.service_typename %}",
-  geogig_enabled = {{ GEOGIG_ENABLED|lower  }},
+  geogit_enabled = {{ GEOGIT_ENABLED|lower  }},
   time_enabled = {{ TIME_ENABLED|lower  }},
   userLookup = "{% url "geonode.views.ajax_lookup" %}"
 
