--- a/geonode/layers/templates/layers/layer_detail.html
+++ b/geonode/layers/templates/layers/layer_detail.html
@@ -98,11 +98,11 @@
         {% endwith %}
       </article>
 
-      {% if GEOGIG_ENABLED and resource.link_set.geogig %}
-        {% with "_geogig_layer_detail.html" as geogig_template %}
-        <article id="geogig" class="tab-pane">
+      {% if GEOGIT_ENABLED and resource.link_set.geogit %}
+        {% with "_geogit_layer_detail.html" as geogit_template %}
+        <article id="geogit" class="tab-pane">
           {% with resource as obj %}
-            {% include geogig_template %}
+            {% include geogit_template %}
           {% endwith %}
         </article>
         {% endwith %}
@@ -352,9 +352,9 @@
 
 {% block extra_script %}
 
-    {% if GEOGIG_ENABLED and resource.link_set.geogig %}
-        {% with "_geogig_scripts.html" as geogig_scripts_template %}
-            {% include  geogig_scripts_template %}
+    {% if GEOGIT_ENABLED and resource.link_set.geogit %}
+        {% with "_geogit_scripts.html" as geogit_scripts_template %}
+            {% include  geogit_scripts_template %}
         {% endwith %}
     {% endif %}
 
