--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -37,7 +37,14 @@ var app, map;
 var tile_list = [];
 var interest_bounds; 
 //var geoserver = "{{geoserver}}";
-var geoserver = curr_location+"/geoserver/";
+//var geoserver = curr_location+"/geoserver/";
+var geoserver = ""
+if ("{{test_mode}}"=="True"){
+    geoserver = window.location.protocol+"//"+window.location.hostname+":8080/geoserver/";
+}else{
+    geoserver = curr_location+"/geoserver/" ;
+}
+
 // added stuff
 
 var _TILE_SIZE = 1000;
