--- a/geonode/cephgeo/templates/ceph_main.html
+++ b/geonode/cephgeo/templates/ceph_main.html
@@ -18,6 +18,7 @@
                 <h4><a href="{% url 'maptiles_main' %}" class="toggle toggle-nav"><i class="fa fa-globe"></i>MapTiles</a></h4>
                 <h4><a href="{% url 'cephgeo.views.get_cart' %}" class="toggle toggle-nav"><i class="fa fa-shopping-cart"></i>Data Cart</a></h4>
                 <h4><a href="{% url 'cephgeo.views.ftp_request_list' %}" class="toggle toggle-nav"><i class="fa fa-database"></i>FTP Requests</a></h4>
+                <h4><a href="{% url 'eula.views.eula_form' %}" class="toggle toggle-nav"><i class="fa fa-file-text-o"></i>EULA</a></h4>
             </nav>
         </div>
     </div>
