added legend for maptiles, h4 tags for list heading

--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -54,7 +54,7 @@
             </li>
 	    <li>
 		<h4 class="list-group-item-heading">Legend</h4>
-		<img id="legend_icon" src="https://lipad.dream.upd.edu.ph/geoserver/wms?request=GetLegendGraphic&amp;format=image/png&amp;WIDTH=20&amp;HEIGHT=20&amp;LAYER=geonode:philgrid&amp;legend_options=fontAntiAliasing:true;fontSize:12;forceLabels:on">
+		<img id="legend_icon" src="https://lipad.dream.upd.edu.ph/geoserver/wms?request=GetLegendGraphic&amp;format=image/png&amp;LAYER=geonode:philgrid">
 	    </li>
         </ul>
     </div>
